[gd_scene load_steps=4 format=3]
[ext_resource type="Script" path="res://game/scenes/Main.gd" id=1]
[ext_resource type="Theme" path="res://game/styles/GlobalTheme.tres" id=2]
[ext_resource type="PackedScene" path="res://game/scenes/Center/ChartsView.tscn" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0

[node name="GameClockLabel" type="Label" parent="TopBar"]
text = "SAT - JAN 01, 2400 - 12AM"

[node name="TimeControls" type="HBoxContainer" parent="TopBar"]

[node name="Pause" type="Button" parent="TopBar/TimeControls"]
text = "Pause"

[node name="Play" type="Button" parent="TopBar/TimeControls"]
text = "Play"

[node name="Fast" type="Button" parent="TopBar/TimeControls"]
text = "Fast"

[node name="Skip" type="Button" parent="TopBar/TimeControls"]
text = "Skip"

[node name="CenterArea" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0

[node name="LeftRail" type="VBoxContainer" parent="CenterArea"]
[node name="Communities" type="Button" parent="CenterArea/LeftRail"]
text = "Communities"

[node name="Workspace" type="VBoxContainer" parent="CenterArea"]
size_flags_horizontal = 3
[node name="ChartsView" parent="CenterArea/Workspace" instance=ExtResource("3")]

[node name="RightRail" type="VBoxContainer" parent="CenterArea"]
[node name="Calendar" type="Button" parent="CenterArea/RightRail"]
text = "Calendar"

[node name="BottomBar" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0

